--- a/css/index.css
+++ b/css/index.css
@@ -12,20 +12,33 @@
 html, body {
     background-color: var(--offwhite);
     margin: 0;
-    height: '100%';
+    height: 100%;
+    overflow-x: hidden;
+    font-family: 'Aligarh';
+}
+
+a {
+    cursor: pointer;
 }
 
 #pageContainer {
-    width: 100vw;
-    height: 100vh;
+    position: relative;
+    display: inline-block;
+    z-index: 0;
+    width: 100%;
+    height: 100%;
 }
 
 #navBar {
-    position: absolute;
+    position: fixed;
+    background-color: var(--offwhite);
+    z-index: 1;
     display: inline;
-    padding-top: 1%; padding-bottom: 3%;
-    width: 100%;
-    height: 7%;
+    margin-top: 0vh;
+    padding-top: 5vh; padding-bottom: 7vh;
+    width: 100vw;
+    height: 10vh;
+    transition: transform 1s ease-in-out;
 }
 
 #navBar > div {
@@ -34,11 +47,12 @@ html, body {
 }
 
 #stackMenu {
-    height: 35px;
-    max-height: 100%;
-    width: 40px;
-    margin-top: 20px;
+    height: 50px;
+    max-height: 100%; max-width: 10%;
+    margin-top: 5px;
+    width: 50px;
     margin-left: 5%;
+    cursor: pointer;
 }
 #stackMenu > div {
     display: flex;
@@ -54,7 +68,132 @@ html, body {
 }
 #pageLogo {
     margin-left: 35%;
-    max-height: 120%;
+    max-height: 100%;
     background-size: contain;
     background-repeat: no-repeat;
+}
+#bannerContainer {
+    display: flex;
+    justify-content: center;
+    width: 90vw;
+    margin: auto;
+}
+#banner {
+    position: relative;
+    justify-content: center;
+    margin-top: 22vh;
+    background: url(/public/Dubai_Banner-sharp.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 450px;
+    background-size: cover;
+    width: 100%;
+    border-radius: 2px;
+}
+div[id^="discoverContainer"] {
+    position:relative;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 0.5fr 1fr auto;
+    column-gap: 10%;
+    grid-auto-flow: column;
+    width: 90vw;
+    margin: auto;
+    margin-top: 10vh; margin-bottom: 10vh;
+}
+#discoverText11 {
+    display: grid;
+    grid-row: 1; 
+    grid-column: 1;
+    height: fit-content;
+}
+#discoverText11 > * {
+    margin-bottom: 5%;
+}
+#loungeLandscape {
+    display: grid;
+    grid-row: 2; 
+    grid-column: 1;
+    max-width: 90%;
+} #loungeLandscape > img {
+    width: 100%;
+    object-fit: cover;
+    border-radius: 2px;
+}
+#loungePortrait{
+    display: grid;
+    grid-row: 1/3;
+    grid-column: 2;
+    height: 100%;
+} #loungePortrait > img {
+    width: 80%;
+    object-fit: cover;
+    border-radius: 2px;
+}
+#menuCard {
+    display: flex;
+    flex-direction: row;
+    width: 90vw;
+    height: 45vw;
+    margin: auto;
+    background-color: #ddbf98;
+    /* border: solid #deb887 2px; */
+    border-radius: 2px;
+} #menuCard > div {height: 100%; width: 50%;}
+#cardImage {
+    background: url(/public/Square_Sample.jpg);
+    background-size: contain;
+}
+#cardCaption {
+    align-content: center;
+} #cardCaption > * {
+    margin-left: 5%;
+    margin-right: 5%;
+}
+#discoverText12 {
+    display: grid;
+    grid-row: 1; 
+    grid-column: 2;
+    height: fit-content;
+}
+#discoverText12 > * {
+    margin-bottom: 5%;
+}
+#cafeLandscape {
+    display: grid;
+    grid-row: 2; 
+    grid-column: 2;
+    max-width: 90%;
+} #cafeLandscape > img {
+    width: 100%;
+    object-fit: cover;
+    border-radius: 2px;
+}
+#cafePortrait{
+    display: grid;
+    grid-row: 1/3;
+    grid-column: 1;
+    height: 100%;
+} #cafePortrait > img {
+    width: 80%;
+    object-fit: cover;
+    border-radius: 2px;
+}
+#contactPane {
+    display: flexbox;
+}
+
+
+a[class^="link"] {
+    font-family: 'Arial';
+    color: rgb(255, 255, 255);
+    width: fit-content;
+    padding-bottom: 2px; padding-right: 3%;
+    border-bottom-style: solid; border-bottom-width: 2px;
+}
+.link45 {
+    border-bottom-color: #deb887;
+}
+.link82 {
+    border-bottom-color: white;
 }
