--- a/css/index.css
+++ b/css/index.css
@@ -1,19 +1,19 @@
 @font-face {
     font-family: 'Aligarh';
-    src: url("./resources/Aligarh-Light.ttf") format('truetype');
+    src: url("../resources/Aligarh-Light.ttf") format('truetype');
     font-weight: lighter;
     font-style: normal;
 }
 
 :root {
     --offwhite: #d7d3c8;
+    --beige: #ddbf98;
 }
 
 html, body {
     background-color: var(--offwhite);
     margin: 0;
     height: 100%;
-    overflow-x: hidden;
     font-family: 'Aligarh';
 }
 
@@ -24,9 +24,18 @@ a {
 #pageContainer {
     position: relative;
     display: inline-block;
-    z-index: 0;
     width: 100%;
     height: 100%;
+}
+
+#navMenu {
+    position: fixed;
+    background-color: var(--beige);
+    z-index: 2;
+    height: 100vh;
+    width: 100vw;
+    visibility: hidden;
+    transition: visibility 0.26s, opacity 0.25s ease-in-out
 }
 
 #navBar {
@@ -38,7 +47,7 @@ a {
     padding-top: 5vh; padding-bottom: 7vh;
     width: 100vw;
     height: 10vh;
-    transition: transform 1s ease-in-out;
+    transition: transform 0.5s ease-in-out;
 }
 
 #navBar > div {
@@ -134,22 +143,23 @@ div[id^="discoverContainer"] {
     display: flex;
     flex-direction: row;
     width: 90vw;
-    height: 45vw;
+    height: 60vw;
     margin: auto;
-    background-color: #ddbf98;
-    /* border: solid #deb887 2px; */
-    border-radius: 2px;
+    background-color: var(--beige);
+    /* border: solid #deb887 2px;
+    border-radius: 2px; */
 } #menuCard > div {height: 100%; width: 50%;}
 #cardImage {
     background: url(/public/Square_Sample.jpg);
-    background-size: contain;
+    background-size: cover;
 }
 #cardCaption {
     align-content: center;
 } #cardCaption > * {
     margin-left: 5%;
-    margin-right: 5%;
+    margin-right: 10%;
 }
+#discoverContainer2 {justify-content: end;}
 #discoverText12 {
     display: grid;
     grid-row: 1; 
@@ -180,16 +190,33 @@ div[id^="discoverContainer"] {
     border-radius: 2px;
 }
 #contactPane {
-    display: flexbox;
+    display: flex;
+    flex-direction: row;
+    width: 90vw;
+    margin-top: 20vh;
+    margin-left: auto; margin-right: auto;
+    justify-content:  space-between;
 }
 
-
+div[class^="navLink"] {
+    color: black;
+    font-size: 8vh;
+    cursor: default;
+} div[class^="navLink"]:hover {color: var(--offwhite);}
 a[class^="link"] {
     font-family: 'Arial';
     color: rgb(255, 255, 255);
     width: fit-content;
     padding-bottom: 2px; padding-right: 3%;
     border-bottom-style: solid; border-bottom-width: 2px;
+}
+.fa-instagram {
+    background-image: url(/resources/Instagram_Glyph_Black.png);
+    height: 5vh;
+    width: 5vh;
+    background-size: contain;
+    background-repeat: no-repeat;
+    cursor: pointer;
 }
 .link45 {
     border-bottom-color: #deb887;
