--- a/css/index.css
+++ b/css/index.css
@@ -38,7 +38,8 @@ h2 {
     height: 100vh;
     width: 100vw;
     visibility: hidden;
-    transition: visibility 0.26s, opacity 0.25s ease-in-out
+    opacity: 0%;
+    transition: visibility 0.26s, opacity 0.25s ease-in-out;
 }
 
 #navBar {
@@ -111,8 +112,8 @@ div[id^="discoverContainer"] {
     grid-auto-flow: column;
     width: 90vw;
     margin: auto;
-    margin-top: 10vh; margin-bottom: 10vh;
 }
+#discoverContainer1 {margin-top: 10vh;}
 #discoverText11 {
     display: grid;
     grid-row: 1; 
@@ -147,7 +148,7 @@ div[id^="discoverContainer"] {
     flex-direction: row;
     width: 90vw;
     height: 60vw;
-    margin: auto;
+    margin: 5vw auto;
     background-color: var(--beige);
     /* border: solid #deb887 2px;
     border-radius: 2px; */
@@ -196,7 +197,7 @@ div[id^="discoverContainer"] {
     display: flex;
     flex-direction: row;
     width: 90vw;
-    margin-top: 20vh;
+    margin-top: 10vw;
     margin-left: auto; margin-right: auto;
     justify-content:  space-between;
 } #contactPane > div > h1 {
@@ -209,6 +210,7 @@ div[class^="navLink"] {
     color: black;
     font-size: 8vh;
     cursor: default;
+    transition: color 0.2s ease-out;
 } div[class^="navLink"]:hover {color: var(--offwhite);}
 a[class^="link"] {
     font-family: 'Arial';
