--- a/css/index.css
+++ b/css/index.css
@@ -107,10 +107,11 @@ div[id^="discoverContainer"] {
     position:relative;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 0.5fr 1fr auto;
+    grid-template-rows: auto auto;
     column-gap: 10%;
     grid-auto-flow: column;
     width: 90vw;
+    height: fit-content;
     margin: auto;
 }
 #discoverContainer1 {margin-top: 10vh;}
